fix the double scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
 body {
   background: black;
   color: white;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 img {
